--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
+    "@babel/plugin-proposal-private-property-in-object": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
